--- a/finish.css
+++ b/finish.css
@@ -56,4 +56,57 @@ body {
     border: 2px solid;
     border-color: var(--primary);
     text-decoration: none;
+}
+
+.boissons {
+    z-index: 100;
+    height: 250px;
+    animation: shake 8s infinite;
+    transform: scale(0.85);
   }
+
+@keyframes shake {
+    0% {
+        transform: scale(0.85) rotate(1deg);
+    }
+
+    10% {
+        transform: rotate(4deg);
+    }
+
+    20% {
+        transform: scale(0.90) rotate(-4deg);
+    }
+
+    30% {
+        transform: rotate(3deg);
+    }
+
+    40% {
+        transform: rotate(-3deg);
+    }
+
+    50% {
+        transform: scale(0.85) rotate(8deg);
+    }
+
+    60% {
+        transform: rotate(-6deg);
+    }
+
+    70% {
+        transform: rotate(5deg);
+    }
+
+    80% {
+        transform: scale(0.90) rotate(-5deg);
+    }
+
+    90% {
+        transform: rotate(2deg);
+    }
+
+    100% {
+        transform: scale(0.85) rotate(1deg);
+    }
+}
