--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: flex-start;
   flex-direction: column;
   gap: 10px;
 }
@@ -54,6 +54,7 @@ header {
   border: 2px solid;
   border-color: var(--primary);
   border-radius: 5px;
+  margin-top: 50px;
 }
 
 h1{
@@ -65,6 +66,7 @@ h1{
   width: 750px;
   justify-content: space-between;
   z-index: 0;
+  margin: 75px 0;
 }
 
 .prev, .next {
@@ -253,6 +255,8 @@ h1{
 }
 
 .button {
+  margin-top: auto;
+  margin-bottom: 50px;
   background-color: var(--secondary);
   width: 250px;
   height: 50px;
