--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-evenly;
   flex-direction: column;
   gap: 10px;
 }
@@ -54,7 +54,6 @@ header {
   border: 2px solid;
   border-color: var(--primary);
   border-radius: 5px;
-  margin-top: 50px;
 }
 
 h1{
@@ -63,23 +62,24 @@ h1{
 
 .sides {
   display: flex;
+  position: absolute;
   width: 750px;
   justify-content: space-between;
   z-index: 0;
-  margin: 75px 0;
+  top: 5%;
 }
 
 .prev, .next {
   position: relative;
   width: 150px;
   height: 60px;
-  top: 7%;
+  top: 0;
 }
 
 .middle {
   z-index: 1;
   position: absolute;
-  top: 4%;
+  top: 6%;
   width: 500px;
   padding: 7.5px 0;
   display: flex;
@@ -255,8 +255,6 @@ h1{
 }
 
 .button {
-  margin-top: auto;
-  margin-bottom: 50px;
   background-color: var(--secondary);
   width: 250px;
   height: 50px;
